tools/tests/errors/surf_lex_08.experr
error: invalid numeric literal '0x'